2.5.1.2
Minor:
- Started saving font size to file.
- Added the trait IndiscriminateThief to allow level drainers to steal levels from each other.

Bug fixes:
- Airi can no longer disguise as Maya (this fixes a crash bug)
- Removed unloadable traits from loaded growth plans
- Fixed stale combats getting saved after a match (results in errors if leveling up during daytime)

2.5.1.1

Balance:
- Nerfed attribute based increases to pheromones, certain toys, and draining

Bug fixes:
- Actually implemented Bottomless Pit (thanks Truepower)
- Fixed various bugs with addictions (Thanks DarkSinfulMage)
- Fixed some text issues
- Made old 2.5.0.x saves compatible with the new build
	- (warning: this will make Reyka's traits growths weird, and she'll gain extra traits she is not supposed to have any more, so do so at your own risk)
- Fixed some draining issues

2.5.1

QoL/GUI:
- Made the body part sort order stable
- Made the body part description non-random in the status window
- Added new messages for drained and converted attributes (they work the same way though as before)

New:
- Added Reyka's focus traits, courtesy of dndw 
- At level 12, choose between disabling and seduction
- At level 22, choose between draining and corruption
	- Word of warning, if you choose corruption, she will not necessarily corrupt only the player.
- Rebalanced her trait gains to work with her new focus traits

Balance:
- Seduction/beauty bonus has been cut in half for pleasure attacks (remains the same for temptation)
- Tighten now costs 15 mojo
- Powerful hips now only allow grind/bounce from below.
- Dominate can no longer be used while you are already in a dominant stance
- Tempt, Charm, Facesit and Smother temptation scaling with charisma has been nerfed

Other:
- "Wild Ride" is now called "Wild Grind" when used from below (effects unchanged)

Bug fixes:
- Fixed a bug where level ups were being displayed even though the player isn't leveling up in combat.