@@ -456,13 +456,13 @@ public enum Trait {
     ControlledRelease("Controlled Release", "Can use mind control to tempt opponents"),
     RemoteControl("Remote Control", "Can deploy a fancy hypnosis trap"),
     EyeOpener("Eye Opener", "The harpoon toy enhances mind control"),
-    
+
     //Reyka Disabling Focus
     SuccubusWarmth("Succubus's Warmth", "Why would you even want to escape?"),
     Pacification("Pacification", "Milk may cause Charmed"),
     DemonsEmbrace("Demon's Embrace", "Can wrap up opponent in wings"),
     VampireWings("Vampire Wings", "Contact with wings drains Power"),
-    
+
     // Reyka Seduction Focus
     MelodiousInflection("Melodious Inflection", "Speaks in a 'Charming' manner"),
     ComeHither("Come Hither", "Can draw Charmed opponents to herself"),
