@@ -82,4 +82,5 @@ public enum Stsflag {
     tailsucked, 
     tailfucked,
     permanent,
+    mindgames,
 }
